<resources>
    <string name="app_name">FromIndia</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="new_user">New User?</string>
    <string name="already_have_acc">Already have an account?</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="title_activity_main2">FIHomePageActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--
    Bottom Menu label
    -->
    <string name="lbl_super_combo">Super Combo</string>
    <string name="lbl_native_special">Native Special</string>
    <string name="lbl_apparels">Apparels</string>
    <string name="lbl_indian_craft">Indian Craft</string>
    <string name="product_for_you">Product For You</string>
    <string name="monthly_deal">Monthly Deal</string>
    <string name="view_all">View All</string>
    <string name="send">Send</string>
    <string name="update">Update</string>
    <string name="address">Address</string>
    <string name="apartment_suite_etc">Apartment,suite,etc.,</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="pin_code">Pin code</string>
    <string name="save">Save</string>
    <string name="title_add_new_address">Add new address</string>
    <string name="lbl_exit_alert">Are you sure to exit?</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="lbl_clear_filter">Clear Filters</string>
    <string name="header_filter">Filters</string>
    <string name="lbl_enter_qty">Please enter the quantity</string>

</resources>
