<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="@dimen/padding_20">

            <RelativeLayout
                android:id="@+id/login_reg_lay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding_10"
                android:layout_marginTop="@dimen/padding_10"
                android:padding="@dimen/padding_8"
                android:paddingTop="@dimen/padding_10">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/login_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_10"
                    android:text="@string/login"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/dimen_18" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/register_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/padding_20"
                    android:layout_toRightOf="@+id/login_txt"
                    android:padding="@dimen/padding_10"
                    android:paddingLeft="@dimen/padding_15"
                    android:text="@string/register"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dimen_18" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/login_lay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_reg_lay"
                android:layout_margin="@dimen/padding_10"
                android:padding="@dimen/padding_5dp"
                android:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/email_edt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        app:passwordToggleEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/pwd_edt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:paddingTop="@dimen/padding_5dp"
                        android:paddingRight="@dimen/padding_5dp"
                        android:text="@string/forgot_password"
                        android:textColor="@color/light_coffee"></androidx.appcompat.widget.AppCompatTextView>

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/login_btn"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/btn_height_55"
                        android:layout_marginTop="@dimen/padding_15"
                        android:background="@drawable/bg_login_green"
                        android:padding="@dimen/padding_5dp"
                        android:paddingTop="@dimen/padding_15"
                        android:text="@string/login"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="normal"></androidx.appcompat.widget.AppCompatButton>
                </LinearLayout>

            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/signup_lay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_reg_lay"
                android:layout_margin="@dimen/padding_10"
                android:padding="@dimen/padding_8"
                android:visibility="invisible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/first_name">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/firstName_EDT"
                            style="@style/MyHintStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/last_name">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/lastName_EDT"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/signUp_email_EDT"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        app:passwordToggleEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/signUp_pwd_EDT"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/confirm_password">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/signUp_confirm_pwd_EDT"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/signUp_btn"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/btn_height_55"
                        android:layout_marginTop="@dimen/padding_10"
                        android:background="@drawable/bg_login_green"
                        android:padding="@dimen/padding_10"
                        android:paddingTop="@dimen/padding_5dp"
                        android:text="@string/register"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="normal"></androidx.appcompat.widget.AppCompatButton>
                </LinearLayout>

            </RelativeLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/padding_15"
                android:orientation="vertical"
                android:padding="@dimen/padding_15"
                android:paddingBottom="@dimen/padding_10">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingTop="@dimen/padding_5dp"
                    android:paddingRight="@dimen/padding_5dp"
                    android:text="@string/already_have_acc"
                    android:textColor="@color/light_coffee"></androidx.appcompat.widget.AppCompatTextView>

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="@dimen/dimen_160"
                    android:layout_height="@dimen/btn_height_55"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/padding_10"
                    android:background="@drawable/bg_capsule_btn"
                    android:padding="@dimen/padding_10"
                    android:paddingTop="@dimen/padding_5dp"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="normal"></androidx.appcompat.widget.AppCompatButton>

            </LinearLayout>

        </RelativeLayout>


    </LinearLayout>
</layout>