<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"

    android:clickable="true"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_gery">


        <RelativeLayout
            android:id="@+id/headerLAY"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include layout="@layout/inflate_custom_headerbtn"></include>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/profileImMainLAY"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_pheader_160"
            android:layout_below="@+id/headerLAY"
            android:background="@color/app_green">

            <RelativeLayout
                android:id="@+id/profileIMLay"
                android:layout_width="@dimen/dimen_profile_80"
                android:layout_height="@dimen/dimen_profile_80"
                android:layout_centerInParent="true">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profileIM"
                    android:layout_width="@dimen/dimen_profile_80"
                    android:layout_height="@dimen/dimen_profile_80"
                    android:src="@drawable/ic_launcher_icon"></de.hdodenhof.circleimageview.CircleImageView>

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:src="@drawable/ic_camera"></androidx.appcompat.widget.AppCompatImageView>

            </RelativeLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profileImMainLAY"
            android:layout_marginTop="@dimen/padding_10"
            android:background="@drawable/bg_cardview"
            android:orientation="vertical"
            android:padding="@dimen/padding_10">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/firstNameLAY"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"
                android:padding="@dimen/padding_8"
                app:errorTextAppearance="@style/ErrorText">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/firstNameEDT"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lastNameLAY"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"
                android:padding="@dimen/padding_8"
                app:errorTextAppearance="@style/ErrorText">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/lastNameEDT"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"

                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signUpEmailLAY"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:padding="@dimen/padding_8"
                app:errorTextAppearance="@style/ErrorText">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signUpEmailEDT"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>